--- a/ML/RNN_Training.ipynb
+++ b/ML/RNN_Training.ipynb
@@ -25,7 +25,7 @@
         }
       ],
       "source": [
-        "!pip install tokenizers datasets"
+        "!pip install tokenizers"
       ]
     },
     {
@@ -148,6 +148,15 @@
         "sequences, labels = load_sequences(base_path)\n",
         "sequence_dataset = SequenceDataset(sequences, labels)\n",
         "dataloader = DataLoader(sequence_dataset, batch_size=32, collate_fn=sequence_dataset.collate_fn, shuffle=True)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "seq, y = next(iter(dataloader))"
       ]
     },
     {
