refactor: git in ipynb

--- a/ML/RNN_Training.ipynb
+++ b/ML/RNN_Training.ipynb
@@ -2,18 +2,18 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 35,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "pLT-kTPRw2a7",
-        "outputId": "409c57ff-7c46-4eb4-a70e-7034ba679fc5"
+        "outputId": "6e7c9e1a-174e-4035-f5fb-4831ac93c306"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Requirement already satisfied: tokenizers in /usr/local/lib/python3.7/dist-packages (0.12.1)\n"
@@ -26,18 +26,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 36,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "OsAs362r7Gzq",
-        "outputId": "d3802292-cd8b-47a9-b6a4-1ad0270ffbcc"
+        "outputId": "6df76396-0179-4b52-eb06-f18a2a7e31c8"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
@@ -49,21 +49,64 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "!git clone https://github.com/cgjeong23/Viral-genomic-classification.git"
+      ],
+      "metadata": {
+        "id": "-giXsqCTNVq-",
+        "outputId": "806545e2-d6c7-4698-ae07-1a8d5ad3825e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cloning into 'Viral-genomic-classification'...\n",
+            "remote: Enumerating objects: 50, done.\u001b[K\n",
+            "remote: Counting objects: 100% (50/50), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (34/34), done.\u001b[K\n",
+            "remote: Total 50 (delta 17), reused 47 (delta 14), pack-reused 0\u001b[K\n",
+            "Unpacking objects: 100% (50/50), done.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!mv Viral-genomic-classification virus"
+      ],
+      "metadata": {
+        "id": "mbCr-B0TOGa_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "L0ziw01lNU9t"
+      },
       "source": [
         "## Imports"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
+      "execution_count": 41,
+      "metadata": {
+        "id": "lHVuLYHONU9u"
+      },
       "outputs": [],
       "source": [
-        "from model import RnnModel, RnnModelForClassification\n",
-        "from train import train, evaluate\n",
-        "from dataloader import load_sequences, sample_data, get_3_splits, SequenceDataset\n",
+        "from virus.ML.model import RnnModel, RnnModelForClassification\n",
+        "from virus.ML.train import train, evaluate\n",
+        "from virus.ML.dataloader import load_sequences, sample_data, get_3_splits, SequenceDataset\n",
         "from torch import nn\n",
         "from torch.utils.data import DataLoader\n",
         "\n",
@@ -82,7 +125,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {
         "id": "ndB83Lk_8-du"
       },
@@ -106,7 +149,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {
         "id": "CwT_tWpX5czF"
       },
@@ -124,7 +167,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "metadata": {
         "id": "ilx5kkj74d1h"
       },
@@ -182,7 +225,9 @@
         "id": "eY2KcLoHye2c"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        ""
+      ]
     }
   ],
   "metadata": {
