--- a/ML/RNN_Training.ipynb
+++ b/ML/RNN_Training.ipynb
@@ -12,8 +12,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Requirement already satisfied: tokenizers in /usr/local/lib/python3.7/dist-packages (0.12.1)\n"
@@ -36,8 +36,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
@@ -50,21 +50,18 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "!git clone https://github.com/cgjeong23/Viral-genomic-classification.git"
-      ],
+      "execution_count": 40,
       "metadata": {
-        "id": "-giXsqCTNVq-",
-        "outputId": "806545e2-d6c7-4698-ae07-1a8d5ad3825e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "-giXsqCTNVq-",
+        "outputId": "806545e2-d6c7-4698-ae07-1a8d5ad3825e"
       },
-      "execution_count": 40,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Cloning into 'Viral-genomic-classification'...\n",
             "remote: Enumerating objects: 50, done.\u001b[K\n",
@@ -74,18 +71,21 @@
             "Unpacking objects: 100% (50/50), done.\n"
           ]
         }
+      ],
+      "source": [
+        "!git clone https://github.com/cgjeong23/Viral-genomic-classification.git"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!mv Viral-genomic-classification virus"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "mbCr-B0TOGa_"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "!mv Viral-genomic-classification virus"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -155,7 +155,7 @@
       },
       "outputs": [],
       "source": [
-        "lr = 1e-4\n",
+        "lr = 1e-2\n",
         "batch_size = 5000\n",
         "num_epochs = 1\n",
         "vocab_size = train_dataset.tokenizer.get_vocab_size()\n",
@@ -225,9 +225,7 @@
         "id": "eY2KcLoHye2c"
       },
       "outputs": [],
-      "source": [
-        ""
-      ]
+      "source": []
     }
   ],
   "metadata": {
@@ -246,16 +244,8 @@
       "name": "python3"
     },
     "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
       "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.9.12"
+      "version": ""
     },
     "vscode": {
       "interpreter": {
