--- a/ML/RNN_Training.ipynb
+++ b/ML/RNN_Training.ipynb
@@ -98,7 +98,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 1,
       "metadata": {
         "id": "lHVuLYHONU9u"
       },
@@ -109,6 +109,9 @@
         "from virus.ML.dataloader import load_sequences, sample_data, get_3_splits, SequenceDataset\n",
         "from torch import nn\n",
         "from torch.utils.data import DataLoader\n",
+        "\n",
+        "import numpy as np\n",
+        "import os\n",
         "\n",
         "%load_ext autoreload\n",
         "%autoreload 2"
@@ -126,25 +129,94 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "use_google_drive = False"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 8,
       "metadata": {
         "id": "ndB83Lk_8-du"
       },
       "outputs": [],
       "source": [
-        "base_path = '/content/drive/MyDrive/trainingdata'\n",
+        "google_drive_path = '/content/drive/MyDrive'\n",
         "\n",
-        "tokenizer_file = '/content/drive/MyDrive/gene_tokenizer.json'\n",
+        "if use_google_drive:\n",
+        "    base_path = f'{google_drive_path}/trainingdata'\n",
+        "    tokenizer_file = f'{google_drive_path}/gene_tokenizer.json'\n",
+        "    label_dict_path = f'{google_drive_path}/label_dict.json'\n",
+        "else:\n",
+        "    base_path = 'trainingdata'\n",
+        "    tokenizer_file = 'gene_tokenizer.json'\n",
+        "    label_dict_path = 'label_dict.json'\n",
         "\n",
         "sequences, labels = load_sequences(base_path)\n",
         "\n",
         "(train_seq, valid_seq, test_seq,\n",
         " train_label, valid_label, test_label) = get_3_splits(sequences, labels)\n",
         "\n",
-        "train_dataset = SequenceDataset(train_seq, train_label, tokenizer_file=tokenizer_file)\n",
+        "label_dict = {k: i for i, k in enumerate(np.unique(labels))}\n",
+        "\n",
+        "train_dataset = SequenceDataset(train_seq, train_label, tokenizer_file=tokenizer_file,\n",
+        "                                label_dict=label_dict)\n",
         "valid_dataset = SequenceDataset(valid_seq, valid_label, tokenizer_file=tokenizer_file,\n",
-        "                                label_dict=train_dataset.label_dict)\n",
+        "                                label_dict=label_dict)\n",
         "test_dataset = SequenceDataset(test_seq, test_label, tokenizer_file=tokenizer_file,\n",
-        "                               label_dict=train_dataset.label_dict)"
+        "                               label_dict=label_dict)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from sklearn.utils.class_weight import compute_class_weight\n",
+        "import numpy as np\n",
+        "\n",
+        "class_weight = compute_class_weight('balanced', classes=np.unique(train_label), y=train_label)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import json\n",
+        "with open(label_dict_path, 'w') as f:\n",
+        "    json.dump(label_dict)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "Counter({'Rhinovirus': 1357334,\n",
+              "         'Influenza': 1123125,\n",
+              "         'Metapneumovirus': 443974,\n",
+              "         'Human': 3531439,\n",
+              "         'Sars_Cov-2': 866496,\n",
+              "         'Coronaviridae': 646548})"
+            ]
+          },
+          "execution_count": 3,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "from collections import Counter\n",
+        "\n",
+        "Counter(labels)"
       ]
     },
     {
@@ -179,7 +251,7 @@
         "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True, collate_fn=train_dataset.collate_fn)\n",
         "valid_loader = DataLoader(valid_dataset, batch_size=batch_size, collate_fn=valid_dataset.collate_fn)\n",
         "test_loader = DataLoader(test_dataset, batch_size=batch_size, collate_fn=test_dataset.collate_fn)\n",
-        "loss_function = nn.CrossEntropyLoss()"
+        "loss_function = nn.CrossEntropyLoss(weight=class_weight)"
       ]
     },
     {
@@ -236,16 +308,22 @@
       "provenance": []
     },
     "gpuClass": "standard",
-    "interpreter": {
-      "hash": "1242238a27090cfd0a9f95cca18072a5b0343382fab30269241b63569e4c53cd"
-    },
     "kernelspec": {
-      "display_name": "Python 3.9.12 64-bit ('datascience': conda)",
+      "display_name": "Python 3.9.10 ('tf-m1')",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
       "name": "python",
-      "version": ""
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.10"
     },
     "vscode": {
       "interpreter": {
