--- a/ML/RNN_Training.ipynb
+++ b/ML/RNN_Training.ipynb
@@ -189,7 +189,7 @@
       "source": [
         "import json\n",
         "with open(label_dict_path, 'w') as f:\n",
-        "    json.dump(label_dict)"
+        "    json.dump('label_dict',f)"
       ]
     },
     {
@@ -251,7 +251,7 @@
         "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True, collate_fn=train_dataset.collate_fn)\n",
         "valid_loader = DataLoader(valid_dataset, batch_size=batch_size, collate_fn=valid_dataset.collate_fn)\n",
         "test_loader = DataLoader(test_dataset, batch_size=batch_size, collate_fn=test_dataset.collate_fn)\n",
-        "loss_function = nn.CrossEntropyLoss(weight=class_weight)"
+        "loss_function = nn.CrossEntropyLoss(weight=torch.Tensor(class_weight).to(\"cuda\"))"
       ]
     },
     {
@@ -308,22 +308,16 @@
       "provenance": []
     },
     "gpuClass": "standard",
+    "interpreter": {
+      "hash": "1242238a27090cfd0a9f95cca18072a5b0343382fab30269241b63569e4c53cd"
+    },
     "kernelspec": {
-      "display_name": "Python 3.9.10 ('tf-m1')",
-      "language": "python",
+      "display_name": "Python 3.9.12 64-bit",
       "name": "python3"
     },
     "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
       "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.9.10"
+      "version": ""
     },
     "vscode": {
       "interpreter": {
