--- a/ML/RNN_Training.ipynb
+++ b/ML/RNN_Training.ipynb
@@ -189,7 +189,7 @@
       "source": [
         "import json\n",
         "with open(label_dict_path, 'w') as f:\n",
-        "    json.dump('label_dict',f)"
+        "    json.dump(label_dict,f)"
       ]
     },
     {
@@ -246,6 +246,7 @@
       "outputs": [],
       "source": [
         "#model = RnnModel(vocab_size, embedding_dim, pad_id, hidden_dim, num_layers)\n",
+        "import torch\n",
         "model = RnnModelForClassification(vocab_size, embedding_dim, pad_id, hidden_dim, num_layers, len(train_dataset.label_dict))\n",
         "model = model.to('cuda')\n",
         "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True, collate_fn=train_dataset.collate_fn)\n",
