--- a/ML/vector_load.ipynb
+++ b/ML/vector_load.ipynb
@@ -12,10 +12,26 @@
     "from inference import infer, load_for_inference\n",
     "from dataloader import load_sequences\n",
     "\n",
+    "device = torch.device('cpu' if torch.cuda.is_available() else 'cpu')\n",
+    "\n",
     "sequence, label = load_sequences('trainingdata')\n",
     "\n",
-    "model, tokenizer, label_dict = load_for_inference('emb.pth','gene_tokenizer.json','label_dict.json',\n",
+    "label_index = {k: [] for k in set(label)}\n",
+    "\n",
+    "for i, l in enumerate(label):\n",
+    "    label_index[l].append(i)\n",
+    "\n",
+    "label_index = {k: np.random.choice(v, 100000) for k, v in label_index.items()}\n",
+    "\n",
+    "sampled_index = np.concatenate(list(label_index.values()))\n",
+    "\n",
+    "sequence = [sequence[i] for i in sampled_index]\n",
+    "label = [label[i] for i in sampled_index]\n",
+    "\n",
+    "model, tokenizer, label_dict = load_for_inference('model.pth','gene_tokenizer.json','label_dict.json',\n",
     " skip_gram=True)\n",
+    "\n",
+    "mode = model.to(device)\n",
     "\n",
     "batch_size = 1000\n",
     "num_batches = len(sequence) // batch_size\n",
@@ -24,12 +40,14 @@
     "\n",
     "all_embeddings = []\n",
     "for i in range(num_batches):\n",
-    "    emb = infer(sequence[i * batch_size: (i+1) * batch_size], tokenizer, model)\n",
+    "    emb = infer(sequence[i * batch_size: (i+1) * batch_size], tokenizer, model.embedding, device=device)\n",
     "    all_embeddings.append(emb)\n",
     "\n",
     "all_embeddings = torch.cat(all_embeddings, 0).numpy()\n",
     "\n",
     "np.save('virus_embeddings.npy', all_embeddings)\n",
+    "with open('label.pkl','wb') as f:\n",
+    "    pickle.dump(label, f)\n",
     "\n",
     "#PCA\n",
     "\n",
