--- a/ML/vector_load.ipynb
+++ b/ML/vector_load.ipynb
@@ -12,7 +12,7 @@
     "from inference import infer, load_for_inference\n",
     "from dataloader import load_sequences\n",
     "\n",
-    "device = torch.device('cpu' if torch.cuda.is_available() else 'cpu')\n",
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
     "\n",
     "sequence, label = load_sequences('trainingdata')\n",
     "\n",
@@ -31,7 +31,7 @@
     "model, tokenizer, label_dict = load_for_inference('model.pth','gene_tokenizer.json','label_dict.json',\n",
     " skip_gram=True)\n",
     "\n",
-    "mode = model.to(device)\n",
+    "model = model.to(device)\n",
     "\n",
     "batch_size = 1000\n",
     "num_batches = len(sequence) // batch_size\n",
