--- a/ML/tokenizer.ipynb
+++ b/ML/tokenizer.ipynb
@@ -33,7 +33,7 @@
     "from tokenizers import Tokenizer\n",
     "from tokenizers import models, trainers\n",
     "\n",
-    "base_path = '/data/tianqing/sehyun/repos/gene_tokenizer/trainingdata'"
+    "base_path = 'trainingdata'"
    ]
   },
   {
