--- a/ML/vector_load.ipynb
+++ b/ML/vector_load.ipynb
@@ -28,7 +28,7 @@
     "sequence = [sequence[i] for i in sampled_index]\n",
     "label = [label[i] for i in sampled_index]\n",
     "\n",
-    "model, tokenizer, label_dict = load_for_inference('model.pth','gene_tokenizer.json','label_dict.json',\n",
+    "model, tokenizer, label_dict = load_for_inference('assets/model.pth','assets/gene_tokenizer.json','assets/label_dict.json',\n",
     " skip_gram=True)\n",
     "\n",
     "model = model.to(device)\n",
@@ -45,8 +45,8 @@
     "\n",
     "all_embeddings = torch.cat(all_embeddings, 0).numpy()\n",
     "\n",
-    "np.save('virus_embeddings.npy', all_embeddings)\n",
-    "with open('label.pkl','wb') as f:\n",
+    "np.save('assets/virus_embeddings.npy', all_embeddings)\n",
+    "with open('assets/label.pkl','wb') as f:\n",
     "    pickle.dump(label, f)\n",
     "\n",
     "#PCA\n",
@@ -58,26 +58,29 @@
     "pca.fit(all_embeddings)\n",
     "embeddings_3d = pca.transform(all_embeddings)\n",
     "\n",
-    "np.save('virus_embeddings_3d.npy',embeddings_3d)\n",
+    "np.save('assets/virus_embeddings_3d.npy',embeddings_3d)\n",
     "\n",
-    "with open('virus_pca.pkl','wb') as f:\n",
+    "with open('assets/virus_pca.pkl','wb') as f:\n",
     "    pickle.dump(f,pca)"
    ]
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "1242238a27090cfd0a9f95cca18072a5b0343382fab30269241b63569e4c53cd"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.12 64-bit ('datascience': conda)",
+   "display_name": "Python 3.9.10 ('tf-m1')",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
    "name": "python",
-   "version": ""
+   "version": "3.9.10"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "e79170ae290057d802c0bc8323610d82df653b25ece5c46593757efbea4a04e3"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
