--- a/ML/vector_load.ipynb
+++ b/ML/vector_load.ipynb
@@ -28,8 +28,7 @@
     "sequence = [sequence[i] for i in sampled_index]\n",
     "label = [label[i] for i in sampled_index]\n",
     "\n",
-    "model, tokenizer, label_dict = load_for_inference('assets/model.pth','assets/gene_tokenizer.json','assets/label_dict.json',\n",
-    " skip_gram=True)\n",
+    "model, tokenizer, label_dict = load_for_inference('assets/model.pth','assets/gene_tokenizer.json','assets/label_dict.json')\n",
     "\n",
     "model = model.to(device)\n",
     "\n",
